--- a/scss/components/first-section.scss
+++ b/scss/components/first-section.scss
@@ -1,6 +1,6 @@
 .firstSec {
     grid-column: 1/13;
-    grid-row: 1/3;
+    grid-row: 1/2;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(10, 1fr);
@@ -111,5 +111,65 @@
     }    
 }
 
-
-
+@media (max-width: 768px) {
+    .firstSec {
+        grid-column: 1/4;
+        grid-row: 1/3;
+        grid-template-columns: 5% 90% 5%;
+        grid-template-rows: 60% 40%;
+        justify-content: center;
+        align-items: center;
+        .firstSec-image-wrapper {
+            grid-column: 1/4;
+            grid-row: 1/3;
+            align-self: flex-start;
+        }
+        .firstSec-titles-wrapper {
+            grid-column: 2/3;
+            grid-row: 1/1;
+            align-self: flex-end;
+            h1 {
+                font-size: 8.167vw;
+                margin-bottom: 5.042vw;
+            }
+            h2 {
+                font-size: 6.398vw;
+                line-height: 6.906vw;
+            }
+            h3 {
+                margin-top: 5.521vw;
+                font-size: 2.3vw;
+                line-height: 3vw;
+            }
+            button {
+                margin-top: 5.823vw;
+                font-size: 2.302vw;
+            }
+        }
+        .firstSec-infos-wrapper {
+            grid-column: 2/3;
+            grid-row: 2/3;
+            align-self: center;
+            justify-self: center;
+            .firstSec-local {
+                margin-right: 2vw;
+                font-size: 2.0vw;
+            }
+            .firstSec-date {
+                margin-right: 2vw;
+                font-size: 5.885vw;
+            }
+            .firstSec-adress {
+                span {
+                    line-height: 4vw;
+                    &:first-child {
+                        font-size: 2.0vw;
+                    }
+                    &:last-child {
+                        font-size: 2.2vw;
+                    }
+                }
+            }
+        }
+    }
+}
