--- a/scss/components/top-menu.scss
+++ b/scss/components/top-menu.scss
@@ -12,12 +12,15 @@
             height: auto;
         }
     }
-
+    .hamburger-menu-wrapper {
+        display: none;
+    }
     nav {
         display: flex;
         align-items: center;
         justify-content: space-between;
         width: 38.542vw;
+        align-self: flex-start;
         div {
             margin-right: 4.948vw;
             display: flex;
@@ -45,8 +48,59 @@
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
     .top-menu {
-        // border: 1px solid red;
+        grid-column: 1/4;
+        grid-row: 1/2;
+        flex-direction: row-reverse;
+        align-items: center;
+        padding-top: 10vw;
+        .logo {
+            width: 30vw;
+            padding: 0.5vw;
+            margin-right: 10%;
+            svg {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .hamburger-menu-wrapper {
+            width: 30vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0.5vw;
+            margin-left: 10%;
+            
+            &:focus-within + nav{
+                top: 0;
+            }
+            svg {
+                width: 100px;
+                height: 25px;
+            }
+        }
+        nav {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            height: 50vh;
+            position: absolute;
+            top: -100vh;
+            background-color: gray;
+            padding: 5vw 0;
+            div {
+                margin-right: 0;
+                margin-bottom: 5vw;
+                &:last-child {
+                    border-radius: 1vw;
+                    padding: 4%;
+                }
+                a {
+                    font-size: 6vw;
+                }
+            }
+        }
     }
 }
