--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,6 +4,7 @@
 
 // components
 @import "components/body-grid";
+@import "components/modal";
 @import "components/top-menu";
 @import "components/first-section";
 @import "components/second-section";
