--- a/scss/components/first-section.scss
+++ b/scss/components/first-section.scss
@@ -14,6 +14,7 @@
     }
     
     .firstSec-titles-wrapper {
+        z-index: 2;
         grid-column: 2/8;
         grid-row: 3/7;
         text-align: center;
@@ -41,16 +42,24 @@
         }
         button {
             font-size: 1.302vw;
-            color: #000;
             font-family: $isidora-black;
             text-transform: uppercase;
             background-color: #fffc00;
             border: none;
             border-radius: 5px;
-            padding: 1.302vw;
             margin-top: 1.823vw;
             box-shadow: 0 0 10px #fffc00;
             cursor: pointer;
+            &:focus {
+                border: none;
+                outline: 0;
+            }
+            a {
+                display: block; 
+                padding: 1.302vw;
+                color: #000;
+                text-decoration: none;
+            }
         }
     }
     .firstSec-infos-wrapper {
