--- a/scss/components/sixth-section.scss
+++ b/scss/components/sixth-section.scss
@@ -5,6 +5,7 @@
     text-align: center;
     background-color: #424141;
     padding: 2.083vw 2.344vw;
+    margin-top: 5vw;
     .sixthSec-box-title-wrapper {
         h5 {
             font-family: $bw-regular;
@@ -109,6 +110,7 @@
         padding: 4.083vw 4.344vw;
         margin: 20vw 10vw;
         .sixthSec-box-title-wrapper {
+            
             h5 {
                 font-size: 5vw;
                 text-align: center;
